chore: adjust ts config for stricter settings

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,9 +19,11 @@
 
     /* Linting */
     "strict": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
+    "noImplicitThis": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
   "include": ["src"]
 }
